# robot_impedance_control

./: F.mat  Modifiedfine_Upright.m  ROCR6II_URDF_file.slx  ROCR6II_URDF_file.slxc  ROCR6II_URDF_file_915.slx  T2RPY.m  URDFtoSimscape.m  ddq.mat  dq.mat  getSimX.m  myPlotTheta.m  myPlotXYZRPY.m  q.mat  readme.m  readme.txt  removePath.m  torque.mat  torqueTest.slx  transion.m  程序说明.docx  请先运行readme脚本.txt
CAD_Model/: 14S内衬-gree.SLDPRT  14S外衬-gree.SLDPRT  14内衬-gree.SLDPRT  14外衬-gree.SLDPRT  17内衬-gree.SLDPRT  17外衬-gree.SLDPRT  RJS14-II关节L型-RevB1-gree.SLDPRT  RJS14S-II关节L型-RevB1-gree.SLDPRT  RJSII-17关节L型-RevB2-gree.SLDPRT  ROCR6II尺寸图.SLDDRW  WS-20航空插座-1-gree.SLDPRT  二代底座-gree.SLDPRT  二代弯头-gree.SLDPRT  二代末端法兰-gree.SLDPRT  大臂连杆-gree.SLDPRT  小臂连杆-gree.SLDPRT  机械臂防撞垫70-gree.SLDPRT  机械臂防撞垫80-gree.SLDPRT  机械臂防撞垫小-gree.SLDPRT
ROCR6II_URDF_file/: CMakeLists.txt  package.xml
ROCR6II_URDF_file/config/: joint_names_ROCR6II_URDF_file.yaml
ROCR6II_URDF_file/launch/: display.launch  gazebo.launch
ROCR6II_URDF_file/meshes/: base_link.STL  forearm_link.STL  shoulder_link.STL  wrist_1_link.STL  wrist_2_link.STL  wrist_3_link.STL
ROCR6II_URDF_file/urdf/: ROCR6II_URDF_file.csv  ROCR6II_URDF_file.urdf
slprj/_jitprj/: jitEngineAccessInfo.mat  (+101 more)
theory/: F.mat  JanadotUp3.m  Jge.m  MAIN.m  MCG.mat  PT_t.mat  QS_T.mat  calculate_M.m  circleVerify.m  control_law.m  dataFromReal.txt  ddq.mat  dq.mat  getDH.m  getDesiredX.m  getDesiredXdXddX.m  geteul.m  impendent_control.slx  myPlotTheta.m  myPlotXYZRPY.m  q.mat  rpy2jac.m  tr2eul.m  tr2rpy.m  transion.m  vars_for_cb.mat
(+147 files in other folders)
